--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -26,3 +26,7 @@ fos_user_resetting:
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /profile
+
+dashboard:
+    path:      /
+    defaults:  { _controller: MainAdminBundle:Default:show }
