--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ app/logs/*
 app/cache/*
 web/uploads/*
 web/bundles/*
-
+web/css/*
+web/js/*
+web/libs*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
