--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ web/uploads/*
 web/bundles/*
 web/css/*
 web/js/*
-web/libs*
+web/lib*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
