--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "bootstrap" : "~3.1",
     "jquery": "~2.0.3",
     "angular":"~1.2.16",
-    "angular-route":"~1.2.16"
+    "angular-route":"~1.2.16",
+    "angular-ui-bootstrap":"0.11.0"
   }
 }
