--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,7 +33,7 @@ twig:
 assetic:
     debug:          "%kernel.debug%"
     use_controller: false
-    bundles:        [ MainAdminBundle ]
+    bundles:        [ MainAdminBundle, FOSUserBundle ]
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
