--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,6 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Main\UserBundle\Entity\Users
+
+bazinga_faker:
+    orm: doctrine
