--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "jquery": "~2.0.3",
     "angular":"~1.2.16",
     "angular-route":"~1.2.16",
-    "angular-ui-bootstrap":"0.11.0"
+    "angular-ui-bootstrap":"0.11.0",
+    "ng-table":"0.3.3"
   }
 }
