--- a/src/Main/AdminBundle/Resources/config/routing/userProfile.yml
+++ b/src/Main/AdminBundle/Resources/config/routing/userProfile.yml
@@ -1,16 +1,16 @@
 get_userProfile:
-    path:      /userProfile
+    path:      /userProfile/{id}/show
     defaults:  { _controller: MainAdminBundle:UserProfile:index }
-    methods:  [GET]
-
-get_userProfile_id:
-    path:      /userProfile/{id}
-    defaults:  { _controller: MainAdminBundle:UserProfile:getUserProfile }
     methods:  [GET]
 
 edit_userProfile:
     path:      /userProfile/{id}/edit
     defaults:  { _controller: MainAdminBundle:UserProfile:editUserProfile }
+    methods:  [POST]
+
+get_userProfile_id:
+    path:      /userProfile/{id}
+    defaults:  { _controller: MainAdminBundle:UserProfile:getUserProfile }
     methods:  [GET]
 
 put_userProfile:
