--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
 	"friendsofsymfony/user-bundle": "~2.0@dev",
 	"willdurand/faker-bundle": "@stable",
-	"jdare/clank-bundle": "0.1.*"
+
+        "cboden/ratchet": "0.3.*"
     },
     "scripts": {
         "post-install-cmd": [
