--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         "sensio/framework-extra-bundle": "~3.0",
         "sensio/generator-bundle": "~2.3",
         "incenteev/composer-parameter-handler": "~2.0",
-	"friendsofsymfony/user-bundle": "~2.0@dev",
-	"willdurand/faker-bundle": "@stable",
-
-        "cboden/ratchet": "0.3.*"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "willdurand/faker-bundle": "@stable",
+        "cboden/ratchet": "0.3.*",
+        "react/zmq": "0.2.*|0.3.*"
     },
     "scripts": {
         "post-install-cmd": [
