--- a/app/config/assetic/css.yml
+++ b/app/config/assetic/css.yml
@@ -16,3 +16,7 @@ assetic:
             inputs:
                 -  '%kernel.root_dir%/../web/fonts/glyphicons-halflings-regular.ttf'
             output: 'fonts/glyphicons-halflings-regular.ttf'
+        forn_awesome_woff:
+            inputs:
+                -  '%kernel.root_dir%/../web/assets/vendor/font-awesome/fonts/fontawesome-webfont.woff'
+            output: 'fonts/fontawesome-webfont.woff'
