--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "nvd3": "~1.1.15-beta",
     "angular-nvd3": "latest",
     "angular-ui-ace": "bower",
-    "ace": "~1.1.6"
+    "ace": "~1.1.6",
+    "lodash": "~2.4.1"
   },
   "resolutions": {
     "d3": "~3.4.1"
