--- a/app/config/assetic/css.yml
+++ b/app/config/assetic/css.yml
@@ -16,7 +16,7 @@ assetic:
             inputs:
                 -  '%kernel.root_dir%/../web/fonts/glyphicons-halflings-regular.ttf'
             output: 'fonts/glyphicons-halflings-regular.ttf'
-        forn_awesome_woff:
+        font_awesome_woff:
             inputs:
                 -  '%kernel.root_dir%/../web/assets/vendor/font-awesome/fonts/fontawesome-webfont.woff'
             output: 'fonts/fontawesome-webfont.woff'
@@ -24,3 +24,6 @@ assetic:
             inputs:
                 -  '@MainAdminBundle/Resources/public/css/layout.min.css'
                 -  '@MainAdminBundle/Resources/public/css/main.css'
+        angular_datatables_css:
+            inputs:
+               - '%kernel.root_dir%/../web/assets/vendor/angular-datatables/dist/datatables.bootstrap.css'
