--- a/app/config/assetic/js.yml
+++ b/app/config/assetic/js.yml
@@ -39,3 +39,9 @@ assetic:
         lodash:
             inputs:
                - '%kernel.root_dir%/../web/assets/vendor/lodash/dist/lodash.js'
+        datatables_js:
+            inputs:
+               - '%kernel.root_dir%/../web/assets/vendor/datatables/media/js/jquery.dataTables.js'
+        angular_datatables_js:
+            inputs:
+               - '%kernel.root_dir%/../web/assets/vendor/angular-datatables/dist/angular-datatables.js'
