ng-grid insted of datatables (many test, ng-gris seems the best), responsive css fixes

--- a/app/config/assetic/css.yml
+++ b/app/config/assetic/css.yml
@@ -24,6 +24,6 @@ assetic:
             inputs:
                 -  '@MainAdminBundle/Resources/public/css/layout.min.css'
                 -  '@MainAdminBundle/Resources/public/css/main.css'
-        angular_datatables_css:
+        nggrid_css:
             inputs:
-               - '%kernel.root_dir%/../web/assets/vendor/angular-datatables/dist/datatables.bootstrap.css'
+               - '%kernel.root_dir%/../web/assets/vendor/ng-grid/ng-grid.css'
