--- a/src/Main/AdminBundle/Resources/config/routing/databases.yml
+++ b/src/Main/AdminBundle/Resources/config/routing/databases.yml
@@ -53,6 +53,11 @@ get_database_tables: #Angular REST
     defaults:  { _controller: MainAdminBundle:Databases:tablesList }
     methods:  [GET]
 
+get_database_views: #Angular REST
+    path:      /databases/views/list
+    defaults:  { _controller: MainAdminBundle:Databases:viewsList }
+    methods:  [GET]
+
 get_database_table_definition: #Angular REST
     path:      /databases/table/{name}
     defaults:  { _controller: MainAdminBundle:Databases:tableDefinition }
