--- a/src/Main/AdminBundle/Resources/config/routing/databases.yml
+++ b/src/Main/AdminBundle/Resources/config/routing/databases.yml
@@ -67,3 +67,8 @@ get_database_table_definition: #Angular REST
     path:      /databases/table/{name}
     defaults:  { _controller: MainAdminBundle:Databases:tableDefinition }
     methods:  [GET]
+
+get_database_function_definition: #Angular REST
+    path:      /databases/function/{name}
+    defaults:  { _controller: MainAdminBundle:Databases:functionDefinition }
+    methods:  [GET]
