--- a/src/Main/AdminBundle/Resources/config/routing/databases.yml
+++ b/src/Main/AdminBundle/Resources/config/routing/databases.yml
@@ -69,6 +69,6 @@ get_database_table_definition: #Angular REST
     methods:  [GET]
 
 get_database_function_definition: #Angular REST
-    path:      /databases/function/{name}
+    path:      /databases/function
     defaults:  { _controller: MainAdminBundle:Databases:functionDefinition }
-    methods:  [GET]
+    methods:  [POST]
